# test_arbi

./: .gitignore  .mcp.json  CLAUDE.md  QUICKSTART.md  README.md  analyze_opportunities.py  polymarket_arbitrage_bot.py  polymarket_arbitrage_bot_v2.py  pyproject.toml  run_dashboard.py
.claude/commands/: arb-advisor.md
.claude_config/: settings.json
docs/: PRD_ALPHA_RESEARCH_AUTOMATION.md
src/polyarb/: __init__.py  __main__.py  alerts.py  config.py  dashboard.py  main.py  models.py  scanner.py
src/polyarb/api/: __init__.py  clob.py  gamma.py  websocket.py
src/polyarb/paper_trading/: __init__.py  engine.py  models.py  presets.py  summary_chart.py
src/polyarb/strategies/: __init__.py  base.py  binary_arb.py  negrisk_arb.py
tests/: __init__.py  conftest.py  test_binary_arbitrage.py  test_edge_cases.py  test_models.py  test_negrisk_arbitrage.py  test_paper_trading.py  test_summary_chart.py  test_websocket_detection.py
